Ignore sun misc unsafe memory access